--- a/Gmt/templates/views/layouts/default.hbs
+++ b/Gmt/templates/views/layouts/default.hbs
@@ -17,7 +17,7 @@
 
 <body>
 	<div id="header">
-		<div class="container">
+		<!-- <div class="container"> -->
 			<div role="navigation" class="navbar navbar-inverse">
 				<div class="container-fluid">
 
@@ -63,7 +63,7 @@
 </div>
 				</div>
 			</div>
-		</div>
+		<!-- </div> -->
 	</div>
 	<div id="body">
 		<!--
