--- a/Gmt/templates/views/providerInfo.hbs
+++ b/Gmt/templates/views/providerInfo.hbs
@@ -1,119 +1,111 @@
-<div class="container">
-	<div class="row procedure">
-		<div class="col-lg-8 border">
-			<img src="images/hosp3.png">
-			<div class="scrolls" data-spy="scroll" data-target="#navbar-example" style="margin-top: 4px;margin-left:20px">
-				<div id="navbar-example">
-					<ul class="nav nav-pills nav-justified pills" role="tablist">
-						<!-- {{#each provider}} -->
-						<!-- <li class="active"><a href="#about">{{provider}}</a></li> -->
-						<!-- {{/each}} -->
-					</ul>
+<!-- <div class="container"> -->
+<div class="row procedure">
+	<div class="col-lg-8 border">
+		<img src="images/hosp3.png">
+		<div class="scrolls" data-spy="scroll" data-target="#navbar-example" style="margin-top: 4px;margin-left:20px">
+			<nav class="navbar navbar-default">
+				<ul class="nav navbar-nav">
+					<li><a href="#about">About</a></li>
+					<li><a href="#doctors">Doctors</a></li>
+					<li><a href="#speciality">Speciality</a></li>
+					<li><a href="#reviews">Reviews</a></li>
+				</ul>
+			</nav>
+			<h4 id="about"></h4>
+			<div class="row">
+				<div class="col-lg-1">
 				</div>
-				<h4 id="about"></h4>
-				<p>{{{provider.description}}}</p>
+				<div class="col-lg-10">
+					<p>{{{provider.description}}}</p>
+				</div>
+				<div class="col-lg-1">
+				</div>
+			</div>
 
-				<h4 id="doctors">Doctors</h4>
-				{{#each provider.doctors}}
-					<div class="row proc">
-						<div class="col-lg-2 ">
-							<img src="images/logo.png">
+			<h4 id="doctors">
+				<span>Doctors</span>
+			</h4>
+			<div class="q">
+				<div class="p">
+					{{#each provider.doctors}}
+
+						<div class="row proc " style="margin-left:0px;">
+							<div class="col-lg-1">
+							</div>
+							<div class="col-lg-3 ">
+								<img src="images/logo.png">
+							</div>
+							<div class="col-lg-5  procedure-doc">
+								<p><a href="/doctor/{{key}}">{{name}}</a></p>
+								<p>{{{description}}}</p>
+
+							</div>
+							<div class="col-lg-2">
+								<!-- <button type="button" class="bttn ">Verified</button> -->
+								<input type="text" class="form-control" id="text" placeholder="Verified">
+							</div>
+							<div class="col-lg-1">
+							</div>
 						</div>
-						<div class="col-lg-5  procedure-doc">
-							<h3><a href="/doctor/{{key}}">{{name}}</a></h3>
-							<p>{{description}}</p>
-							<p>{{data}}</p>
-						</div>
-						<div class="col-lg-2">
-							<!-- <button type="button" class="bttn ">Verified</button> -->
-							<input type="text" class="form-control" id="txt" placeholder="Verified">
-						</div>
-					</div>
-				{{/each}}
-				<h4 id="procedures">Speciality</h4>
-				<div class="row proc">
-					{{#each specialities}}
-						<div class="col-lg-4">
-							<button type="button" class="btn btn-default">{{name}}</button>
-						</div>
+
 					{{/each}}
 				</div>
-				<h4 id="procedures">Procedure</h4>
-				<div class="row proc">
+			</div>
+			<h4 id="speciality">
+				<span>Speciality</span>
+			</h4>
+			<div class="row spec">
+				{{#each specialities}}
+
+					<div class="col-lg-4">
+						<button type="button" class="btn btn-default">{{name}}</button>
+					</div>
+				{{/each}}
+			</div>
+			<!-- <h4 id="procedures">Procedure</h4> -->
+			<!-- <div class="row proc">
 					{{#each procedures}}
 						<div class="col-lg-4">
 							<button type="button" class="btn btn-default">{{name}}</button>
 						</div>
 					{{/each}}
-				</div>
-			</div>
-		</div>
-		<div class="col-lg-4 name">
-			<h3>{{provider.name}}</h3>
-			<br>
-			<br>
-			<div class="form">
-				<form class="form-inline" method="post" style="margin-left:25px;">
-					<input type="hidden" name="action" value="enquire">
-					<div class="form-group nm">
-						<input type="text" name="name.full" class="form-control" id="name" placeholder="Name:">
-					</div>
-					<div class="form-group">
-						<input type="email" name="email" class="form-control" id="email" placeholder="Email:">
-					</div>
-					<div class="form-group">
-						<input type="phone" name="phone" class="form-control" id="phone" placeholder="Phone(Optional)">
-					</div>
-					<div class="form-group">
-						<input type="text" name="procedures" class="form-control" id="procedure" placeholder="Procedure">
-					</div>
-					<div class="form-group">
-						<input type="text" name="doctors" class="form-control" id="doctor" placeholder="Doctor">
-					</div>
-					<div class="form-group">
-						<textarea class="textarea" name="message" rows="5" placeholder="Questions/Comments"></textarea>
-					</div>
-					<br>
-					<input type="submit" value="Enquire" class="button" style="" />
-				</form>
-				{{#if enquirySent}}
-					<br>
-					<h3 style="margin-left: 0px;">Enquiry Sent successfully</h3>
-				{{/if}}
-
-				<!-- <div class="form-group">
-						<div class="dropdown">
-							<form class="form-inline" method="post" style="margin-left:25px;">
-								<input type="hidden" name="action" value="list">
-								<button class="btn btn-default dropdown-toggle" name = "procedure" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-									Procedure
-									<span class="caret"></span>
-								</button>
-								<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-									{{#each procedures}}
-										<li><a href="#">{{name}}</a></li>
-									{{/each}}
-								</ul>
-							</form>
-						</div>
-					</div> -->
-				<!-- <div class="form-group">
-						<div class="dropdown">
-							<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-								Doctor
-								<span class="caret"></span>
-							</button>
-							<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-								{{#each doctors}}
-									<li><a href="#">{{name}}</a></li>
-								{{/each}}
-							</ul>
-						</div>
-					</div> -->
-				<br>
-				<!-- <input type="treatment" class="form-control" id="treatment" placeholder="Treatment" style="width: 300px; height: 45px;">
 				</div> -->
-
-			</div>
 		</div>
 	</div>
+	<div class="col-lg-4 name">
+		<h3>{{provider.name}}</h3>
+		<br>
+		<br>
+		<div class="form">
+			<form class="form-inline" method="post">
+				<input type="hidden" name="action" value="enquire">
+				<div class="form-group nm">
+					<input type="text" name="name.full" class="form-control" id="name" placeholder="Name:">
+				</div>
+				<div class="form-group">
+					<input type="email" name="email" class="form-control" id="email" placeholder="Email:">
+				</div>
+				<div class="form-group">
+					<input type="phone" name="phone" class="form-control" id="phone" placeholder="Phone(Optional)">
+				</div>
+				<div class="form-group">
+					<input type="text" name="procedures" class="form-control" id="procedure" placeholder="Procedure">
+				</div>
+				<div class="form-group">
+					<input type="text" name="doctors" class="form-control" id="doctor" placeholder="Doctor">
+				</div>
+				<div class="form-group">
+					<textarea class="textarea" name="message" rows="5" placeholder="Questions/Comments"></textarea>
+				</div>
+				<br>
+				<input type="submit" value="Enquire" class="button" style="" />
+			</form>
+			{{#if enquirySent}}
+				<br>
+				<h3 style="margin-left: 0px;">Enquiry Sent successfully</h3>
+			{{/if}}
+			<br>
+		</div>
+	</div>
+</div>
+<!-- </div> -->
