--- a/Gmt/templates/views/doctor.hbs
+++ b/Gmt/templates/views/doctor.hbs
@@ -1,6 +1,6 @@
-<div class="container">
+<!-- <div class="container"> -->
 	<div class="row procedure">
-		<div class="col-lg-8 border">
+		<div class="col-lg-8 borders">
 			<div class="row doc" style="height:350px">
 				<div class="col-lg-4">
 					<img src="images/logo.png" style="margin-left:50px">
@@ -8,7 +8,7 @@
 				<div class="col-lg-4" style="margin-top:-30px;">
 					{{#each doctor}}
 						<h3>{{name}}</h3>
-						<p style="font-size: 18px;">{{description}}</p>
+						<p style="font-size: 18px;">{{{description}}}</p>
 						<!-- <p style="font-size: 18px;">{{data}}</p> -->
 					{{/each}}
 				</div>
@@ -21,67 +21,80 @@
 
 				<nav class="navbar navbar-default">
 					<ul class="nav navbar-nav">
-						<li><a href="#bio">Overview</a></li>
+						<li><a href="#bio">Bio</a></li>
 						<li><a href="#education">Education</a></li>
 						<li><a href="#awards">Awards</a></li>
 						<li><a href="#reviews">Reviews</a></li>
 					</ul>
 				</nav>
 
-				<h4 id="providers">Featured Providers</h4>
+				<!-- <h4 id="providers"><span>Featured Providers</span></h4>
 				{{#each providers}}
 					<div class="row procedure-box">
+						<div class="col-lg-1">
+			</div>
 						<div class="col-lg-4">
 							<img src="{{cloudinaryUrl image}}">
 						</div>
 						<div class="col-lg-6">
 							<h3>{{name}}</h3>
-							<a href="">
-								<p>Know More</p>
-							</a>
-							<!-- <button type="button" class="bttn" onclick=location.href="/provider_info/">Know More</button> -->
+						<button type="button" class="btn btn-primary btn-md raised" style=" height: 30px;  outline: none;">Know More</button>
+
 						</div>
+						<div class="col-lg-1">
+			</div>
 					</div>
-				{{/each}}
-				<h4 id="procedures">Procedure</h4>
+				{{/each}} -->
+				<!-- <h4 id="procedures">Procedure</h4>
 				<div class="row proc">
 					{{#each procedures}}
 						<div class="col-lg-4">
 							<button type="button" class="btn btn-default">{{name}}</button>
 						</div>
 					{{/each}}
-				</div>
+				</div> -->
 
 
 				<h4 id="bio"></h4>
+				<div class="row">
+				<div class="col-lg-1">
+				</div>
+				<div class="col-lg-1">
+
 				{{#each provider}}
 					<p>
 						{{description}}
 					</p>
 				{{/each}}
-				<h4 id="education" style="">Education</h4>
-				<h3 style="margin-left: -30px;font-size:18px;">{{doctor.description}}</h3>
-				<p style="margin-left: -30px;"></p>
-				<p style="margin-left: -30px;">2004</p>
-				<h4 id="awards" style="">Awards</h4>
-				<h4 id="reviews" style="">Reviews</h4>
-				<span class="glyphicon glyphicon-star" style="margin-left:-30px"></span>
-				<span class="glyphicon glyphicon-star"></span>
-				<span class="glyphicon glyphicon-star"></span>
-				<p style="margin-left: -30px;" style="margin-left: -30px;">Lorem Ipsum,</p>
-				<p style="margin-left: -30px;">dolor ahajfnnsnsAMnkjndj janangfgbdbd</p>
-				<p style="margin-left: -30px;">jjjajjaa ahnf go away somehwhere, best care and</p>
-				<p style="margin-left: -30px;">help all over.</p>
-				<button type="submit" class="btn btn-default" style="margin-left:-30px; ">Write a review</button>
+			</div>
+			<div class="col-lg-1">
 			</div>
 		</div>
-		<div class="col-lg-4">
+				<h4 id="education"><span>Education</span></h4>
+				<h3 style="margin-left: 60px;font-size:18px;">{{{doctor.description}}}</h3>
+				<!-- <p style="margin-left:30px;"></p> -->
+				<!-- <p style="margin-left: -30px;">2004</p> -->
+				<h4 id="awards" style=""><span>Awards</span></h4>
+				<h4 id="reviews" style=""><span>Reviews</span></h4>
+				<span class="glyphicon glyphicon-star" style="margin-left:30px"></span>
+				<span class="glyphicon glyphicon-star"></span>
+				<span class="glyphicon glyphicon-star"></span>
+				<p style="margin-left: 30px;">Lorem Ipsum,</p>
+				<p style="margin-left: 30px;">dolor ahajfnnsnsAMnkjndj janangfgbdbd</p>
+				<p style="margin-left: 30px;">jjjajjaa ahnf go away somehwhere, best care and</p>
+				<p style="margin-left: 30px;">help all over.</p>
+				<button type="submit" class="btn btn-default" style="margin-left:30px; ">Write a review</button>
+			</div>
+		</div>
+		<div class="col-lg-4 name">
+			<h3>{{speciality}}</h3>
+			<br><br>
 			<!--{{#each treatments}}
 				<h3 style="background-color:#e5e5e5;font-size:18px;width: 320px;height:40px; margin-left: -10px;padding-top:12px;text-align:left;padding-left:10px">{{name}}</h3>
 			{{/each}}-->
 
 			<div class="form">
-				<form class="form-inline" method="post" style="margin-left:25px;">
+				<form class="form-inline" method="post">
 					<input type="hidden" name="action" value="enquire">
 					<div class="form-group nm">
 						<input type="text" name="name.full" class="form-control" id="name" placeholder="Name:">
@@ -114,4 +127,4 @@
 	  </div>
 
 
-	</div>
+	<!-- </div> -->
