--- a/Gmt/templates/views/doctors.hbs
+++ b/Gmt/templates/views/doctors.hbs
@@ -16,7 +16,7 @@
 					</div>
 					<div class="col-lg-8">
 						<p style="margin-left:30px;margin-top:60px">{{name}}</p>
-						<p style="margin-left:30px;margin-top:-25px">{{{description}}}</p>
+						<p style="margin-left:30px;margin-top:-25px">{{{bio}}}</p>
 					</div>
 				</div>
 			</div>
