--- a/Gmt/templates/views/layouts/default.hbs
+++ b/Gmt/templates/views/layouts/default.hbs
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-	<div id="header">
+	<div id="header" style="margin-top:0px">
 		<!-- <div class="container"> -->
 			<div role="navigation" class="navbar navbar-inverse">
 				<div class="container-fluid">
