--- a/Gmt/templates/views/provider.hbs
+++ b/Gmt/templates/views/provider.hbs
@@ -1,50 +1,99 @@
-<div class="container">
+<!-- <div class="container"> -->
 	<div class="row procedure">
 		<div class="col-lg-8 border">
 			<img src="images/hosp3.png">
 			<div class="scrolls" data-spy="scroll" data-target="#navbar-example" style="margin-top: 4px;margin-left:20px">
-				<div id="navbar-example">
-					<ul class="nav nav-pills nav-justified pills" role="tablist">
-						<!-- {{#each provider}} -->
-						<!-- <li class="active"><a href="#about">{{provider}}</a></li> -->
-						<!-- {{/each}} -->
+				<nav class="navbar navbar-default">
+					<ul class="nav navbar-nav">
+						<li><a href="#about">About</a></li>
+						<li><a href="#doctors">Dcotors</a></li>
+						<li><a href="#procedures">Procedures</a></li>
+						<li><a href="#reviews">Reviews</a></li>
 					</ul>
-				</div>
+				</nav>
 				<h4 id="about"></h4>
-				<p>{{{provider.description}}}</p>
-
-				<h4 id="doctors">Doctors</h4>
+				<div class="row">
+					<div class="col-lg-1">
+					</div>
+					<div class="col-lg-10">
+       <p>{{{provider.description}}}</p>
+			  </div>
+				<div class="col-lg-1">
+				</div>
+			</div>
+				<h4 id="doctors"><span>Doctors</span></h4>
 				{{#each provider.doctors}}
 					<div class="row proc">
-						<div class="col-lg-2 ">
+						<div class="col-lg-1">
+						</div>
+						<div class="col-lg-3 ">
 							<img src="images/logo.png">
 						</div>
 						<div class="col-lg-5  procedure-doc">
-							<h3><a href="/doctor/{{key}}">{{name}}</a></h3>
+							<p><a href="/doctor/{{key}}">{{name}}</a></p>
 							<p>{{description}}</p>
 							<p>{{data}}</p>
 						</div>
 						<div class="col-lg-2">
 							<!-- <button type="button" class="bttn ">Verified</button> -->
-							<input type="text" class="form-control" id="txt" placeholder="Verified">
+							<input type="text" class="form-control" id="text" placeholder="Verified">
+						</div>
+						<div class="col-lg-1">
 						</div>
 					</div>
 				{{/each}}
-				<h4 id="procedures">Speciality</h4>
+				<!-- <h4 id="procedures">Speciality</h4>
 				<div class="row proc">
 					{{#each specialities}}
 						<div class="col-lg-4">
 							<button type="button" class="btn btn-default">{{name}}</button>
 						</div>
 					{{/each}}
-				</div>
-				<h4 id="procedures">Procedure</h4>
+				</div> -->
+				<h4 id="procedures"><span>Procedure</span></h4>
 				<div class="row proc">
-					{{#each procedures}}
-						<div>
-							<label>{{name}}: ₹ {{price}} </label>
-						</div>
-					{{/each}}
+					{{#each specialities}}
+									<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+
+					    <div class="panel panel-default">
+					    <div class="panel-heading" role="tab" id="headingOne">
+					      <h4 class="panel-title">
+					        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#{{key}}" aria-expanded="true" aria-controls="collapseOne">
+					        {{name}}
+					        </a>
+					      </h4>
+					    </div>
+					    <div id="{{key}}" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+								<!-- {{#each procedures}}
+					      <div class="panel-body">
+									<div class="row">
+										<div class="col-lg-6">
+											{{name}}
+
+										</div>
+					        <div class="col-lg-3">
+										{{price}}
+									</div>
+									<div class="col-lg-3">
+									<input class="btn btn-default" type="submit" value="Submit">
+								</div>
+								</div>
+					      </div>
+								{{/each}} -->
+					    </div>
+					  </div>
+
+					</div>
+						{{/each}}
+						<h4 id="reviews" style=""><span style="margin-left:140px;">Reviews</span></h4>
+						<span class="glyphicon glyphicon-star" style="margin-left:80px"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						<p style="margin-left: 80px;" >Lorem Ipsum,</p>
+						<p style="margin-left: 80px;">dolor ahajfnnsnsAMnkjndj janangfgbdbd</p>
+						<p style="margin-left: 80px;">jjjajjaa ahnf go away somehwhere, best care and</p>
+						<p style="margin-left: 80px;">help all over.</p>
+						<button type="submit" class="btn btn-default" style="margin-left:80px; ">Write a review</button>
 				</div>
 			</div>
 		</div>
@@ -53,7 +102,7 @@
 			<br>
 			<br>
 			<div class="form">
-				<form class="form-inline" method="post" style="margin-left:25px;">
+				<form class="form-inline" method="post" >
 					<input type="hidden" name="action" value="enquire">
 					<div class="form-group nm">
 						<input type="text" name="name.full" class="form-control" id="name" placeholder="Name:">
@@ -87,4 +136,4 @@
 
 			</div>
 		</div>
-	</div>
+	<!-- </div> -->
