--- a/Gmt/templates/views/doctors.hbs
+++ b/Gmt/templates/views/doctors.hbs
@@ -15,8 +15,8 @@
 						<img src="http://placehold.it/120x120" style="border-radius:120%;margin-top:40px">
 					</div>
 					<div class="col-lg-8">
-						<p style="margin-left:30px;margin-top:60px">{{name}}</p>
-						<p style="margin-left:30px;margin-top:-25px">{{{description}}}</p>
+						<p style="margin-left:30px;margin-top:60px"><a href="/doctor/{{key}}">{{name}}</a></p>
+						<p style="margin-left:30px;margin-top:-25px">{{{bio}}}</p>
 					</div>
 				</div>
 			</div>
