--- a/Gmt/templates/views/provider.hbs
+++ b/Gmt/templates/views/provider.hbs
@@ -21,7 +21,7 @@
 						</div>
 						<div class="col-lg-5  procedure-doc">
 							<h3><a href="/doctor/{{key}}">{{name}}</a></h3>
-							<p>{{description}}</p>
+							<p>{{{bio}}}</p>
 							<p>{{data}}</p>
 						</div>
 						<div class="col-lg-2">
