--- a/Gmt/templates/views/doctor.hbs
+++ b/Gmt/templates/views/doctor.hbs
@@ -8,7 +8,7 @@
 				<div class="col-lg-4" style="margin-top:-30px;">
 					{{#each doctor}}
 						<h3>{{name}}</h3>
-						<p style="font-size: 18px;">{{description}}</p>
+						<p style="font-size: 18px;">{{{description}}}</p>
 						<!-- <p style="font-size: 18px;">{{data}}</p> -->
 					{{/each}}
 				</div>
