--- a/Gmt/templates/views/procedure.hbs
+++ b/Gmt/templates/views/procedure.hbs
@@ -3,7 +3,6 @@
 		<div class="col-lg-8 border">
 			<img src="http://placehold.it/450x150">
 			<div class="scrolls" data-spy="scroll" data-target="#navbar-example" style="margin-top:4px;margin-left:20px">
-
 				<nav class="navbar navbar-default">
 					<ul class="nav navbar-nav">
 						<li><a href="#overview">Overview</a></li>
@@ -11,15 +10,12 @@
 						<li><a href="#doctors">Specialists</a></li>
 					</ul>
 				</nav>
-
-
 				<h4 id="overview"></h4>
 				{{#each specialities}}
 					<p>
-						{{discription}}
+						{{{description}}}
 					</p>
 				{{/each}}
-
 				<h4 id="providers">Featured Providers</h4>
 				{{#each providers}}
 					<div class="row procedure-box">
@@ -28,30 +24,25 @@
 						</div>
 						<div class="col-lg-6">
 							<h3>{{name}}</h3>
-							<a href="">
+							<a href="/provider/{{key}}">
 								<p>Know More</p>
 							</a>
-							<!-- <button type="button" class="bttn" onclick=location.href="/provider_info/">Know More</button> -->
 						</div>
 					</div>
 				{{/each}}
-
 				<h4 id="doctors">Doctors</h4>
 				{{#each doctors}}
 					<div class="row proc">
 						<div class="col-lg-3">
 							<img src="http://placehold.it/120x120">
 						</div>
-
 						<div class="col-lg-5 procedure-doc">
 							<p><a href="/doctor/{{key}}">{{name}}</a></p>
-							<p>{{description}}</p>
+							<p>{{{bio}}}</p>
 							<p>{{data}}</p>
 						</div>
-
 						<div class="col-lg-2">
 							<input type="text" class="form-control" id="text" value="Verified">
-
 						</div>
 					</div>
 				{{/each}}
@@ -63,33 +54,11 @@
 						</div>
 					{{/each}}
 				</div>
-
-				<!-- <h4 id="procedures" style="margin-left:-32px;border-top:2px solid #e5e5e5;padding-top:20px;">Procedures</h4>
-				{{#each treatments}}
-					<div class="row treat"  style="border-bottom-width: 0px;">
-						<div class="col-lg-3">
-							<img src="images/logo.png">
-						</div>
-
-						<div class="col-lg-6 treatment-doc">
-							<p>{{name}} </p>
-							<p>{{description}}</p>
-							<p>{{data}}</p>
-						</div>
-
-						<div class="col-lg-3">
-							<button type="button" class="btn btn-default">Verified</button>
-						</div>
-					</div>
-				{{/each}} -->
-
 			</div>
 		</div>
 
-
 		<div class="col-lg-4">
 			<ul class="nav nav-stacked tabs">
-
 				{{#each specialities}}
 					{{#if active}}
 						<li role="presentation" class="active">
@@ -100,10 +69,7 @@
 						<li role="presentation"><a href="/procedure/{{key}}" style="height:60px;">{{name}}</a></li>
 					{{/if}}
 				{{/each}}
-
 			</ul>
 		</div>
-
 	</div>
-
 </div>
