--- a/Gmt/templates/views/layouts/default.hbs
+++ b/Gmt/templates/views/layouts/default.hbs
@@ -175,7 +175,7 @@
 		});
 	</script>
 	{{!-- //- Customise which Bootstrap javascript files are served by including //- them specifically here, instead of bootstrap-3.3.4.min.js --}}
-	<!-- <script src="/js/bootstrap/bootstrap-3.3.4.min.js"></script> -->
+	<script src="/js/bootstrap/bootstrap-3.3.4.min.js"></script>
 	{{{isAdminEditorJS user}}}
 </body>
 
