--- a/Gmt/templates/views/provider.hbs
+++ b/Gmt/templates/views/provider.hbs
@@ -23,7 +23,7 @@
 			</div>
 				<h4 id="doctors"><span>Doctors</span></h4>
 				{{#each provider.doctors}}
-					<div class="row proc">
+					<div class="row proc" style="margin-left:0px;">
 						<div class="col-lg-1">
 						</div>
 						<div class="col-lg-3 ">
@@ -52,10 +52,24 @@
 				</div> -->
 				<h4 id="procedures"><span>Procedure</span></h4>
 				<div class="row proc">
-					{{#each specialities}}
-									<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+					<!-- {{#each procedures}}
+					<div class="row">
+						<div class="col-lg-6">
 
-					    <div class="panel panel-default">
+							{{name}}
+
+						</div>
+					<div class="col-lg-3">
+						{{price}}
+					</div>
+					<div class="col-lg-3">
+					<input class="btn btn-default" type="submit" value="Submit">
+				</div>
+				</div>
+				{{/each}} -->
+					{{#each specialities}}
+						<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+        <div class="panel panel-default">
 					    <div class="panel-heading" role="tab" id="headingOne">
 					      <h4 class="panel-title">
 					        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#{{key}}" aria-expanded="true" aria-controls="collapseOne">
@@ -63,38 +77,27 @@
 					        </a>
 					      </h4>
 					    </div>
-					    <div id="{{key}}" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-								<!-- {{#each procedures}}
-					      <div class="panel-body">
-									<div class="row">
-										<div class="col-lg-6">
-											{{name}}
 
-										</div>
-					        <div class="col-lg-3">
-										{{price}}
-									</div>
-									<div class="col-lg-3">
-									<input class="btn btn-default" type="submit" value="Submit">
-								</div>
-								</div>
+					    <div id="{{key}}" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+					      <div class="panel-body">
+									  {{name}}
 					      </div>
-								{{/each}} -->
 					    </div>
+
 					  </div>
 
 					</div>
 						{{/each}}
-						<h4 id="reviews" style=""><span style="margin-left:140px;">Reviews</span></h4>
-						<span class="glyphicon glyphicon-star" style="margin-left:80px"></span>
+						</div>
+						<h4 id="reviews" style=""><span>Reviews</span></h4>
+						<span class="glyphicon glyphicon-star" style="margin-left:30px"></span>
 						<span class="glyphicon glyphicon-star"></span>
 						<span class="glyphicon glyphicon-star"></span>
-						<p style="margin-left: 80px;" >Lorem Ipsum,</p>
-						<p style="margin-left: 80px;">dolor ahajfnnsnsAMnkjndj janangfgbdbd</p>
-						<p style="margin-left: 80px;">jjjajjaa ahnf go away somehwhere, best care and</p>
-						<p style="margin-left: 80px;">help all over.</p>
-						<button type="submit" class="btn btn-default" style="margin-left:80px; ">Write a review</button>
-				</div>
+						<p style="margin-left: 30px;">Lorem Ipsum,</p>
+						<p style="margin-left: 30px;">dolor ahajfnnsnsAMnkjndj janangfgbdbd</p>
+						<p style="margin-left: 30px;">jjjajjaa ahnf go away somehwhere, best care and</p>
+						<p style="margin-left: 30px;">help all over.</p>
+						<button type="submit" class="btn btn-default" style="margin-left:30px; ">Write a review</button>
 			</div>
 		</div>
 		<div class="col-lg-4 name">
